# skill_loader

./: README.md  __init__.py  pyproject.toml
analyzer/: __main__.py  cli.py  diff_scope_builder.py  git_utils.py  model_provider.py  prompt_builder.py  repo_discovery.py  repo_updater.py  result_handler.py  run_state_store.py  runner.py  skill_system.py  types.py
docs/: auto_code.md  codex-skill-system-learning.md  skill-loader-design.md
tests/: test_cli_paths.py  test_diff_scope_builder.py  test_json_validation.py  test_repo_updater.py  test_skill_selector.py
